Changelog
---------
3.8.8
- added RPClass support (type checks and transfer compression) to RPAction
- content transfer includes a md5 hash of the content,
  if both server and client are using the new protocol version 34
- automatically try to use a configured SOCKS-proxy. If it cannot be used, Marauroa falls back to direct connections
- RPRuleProcessorImpl provides a default implementation for IRPRuleProcessor
- new server.ini variable server_abuseContact to add a sentence with contact information to the ban dialog.
- use ENGINE instead of TYPE on table creation to be compatible with MySQL 5.5 (now at least MySQL 4.0 is required)

3.8.7
- performance improvement by not deep copying all player objects every turn.
- performance improvement by skipping expensive RPBOject.id uniqueness validation during cloning of RPSlots
- performance improvement by removing redundant calls to Attribute.has() and RPObject.getID()
- increased client side timeout while the server is processing the login (may be caused by slow database queries)
- defined better indices for loginEvent designed to get the number of recently failed logins question faster

3.8.6
- performance optimization in RPObject.getDifference() by drastically reducing the number of RPobject instantiations
- performance optimization in RPObject to create internal list/map objects only on demand
- build script now creates an additional minized jar file for clients: marauroa-client-only.jar
- improved messages on errors in server.ini

3.8.5
- fixed an issue on account renaming
- fixed an issue with special characters in character names
- zones are now stored asynchronously to the database
- fixed a co-modification issue in Attributes.clone() and Statistics.clone()

3.8.4
- fixed "Replacing content to transfer"
- added configurations parameters allow_account_creation and allow_character_creation
- added new Result.FAILED_CREATE_ON_MAIN_INSTEAD of account/character if it was disabled